[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cometaNLP"
version = "0.0.6"
authors = [
  { name="Leonardo Grotti", email="grottileonardo@hotmail.com" },
]
description = "A NLP data and text analysis tool for Italian, Dutch, and English social media comments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
'emoji >= 1.7.0',
'matplotlib >= 3.5.1',
'nltk >= 3.7',
'numpy  >= 1.21.4',
'pandas >= 1.3.4',
'pyphen >= 0.13.0',
'regex >= 2.5.121',
'spacy >= 3.2.3',
'textstat >= 0.7.2'
]

[project.urls]
"Homepage" = "https://github.com/corvusMidnight/cometa"
"Bug Tracker" = "https://github.com/corvusMidnight/cometa/issues"
